Safari bug with vertical-align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -526,7 +526,7 @@ input[type=radio]:checked + .upload-filter-label .upload-filter-preview {
   margin-right: 11px;
   margin-bottom: 11px;
   overflow: hidden;
-
+  vertical-align: top;
   text-align: center;
 }
 
@@ -567,7 +567,7 @@ input[type=radio]:checked + .upload-filter-label .upload-filter-preview {
 }
 
 .picture:hover .picture-stats {
-  display: inline-block;
+  display: block;
 }
 
 .picture-load-failure .picture-stats {
